force-app/main/default/objects/Sfdc_Accountuser_CreatedSuccess__e/Sfdc_Accountuser_CreatedSuccess__e.object-meta.xml
<CustomObject>
    <description>Published by UdcOnboardingService after Account and Contact are successfully created in Salesforce. Establishes ID mapping between uDC and SFDC.</description>
    <label>Sfdc Accountuser Created Success</label>
    <pluralLabel>Sfdc Accountuser Created Successes</pluralLabel>
</CustomObject>