force-app/main/default/objects/Sfdc_Accountuser_CreatedSuccess__e/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>uDC organization identifier (Account.uLab_Acct_Number__c). Populated on both success and failure events if present in the request payload.</description>
    <label>Org Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>