force-app/main/default/objects/Sfdc_Accountuser_CreatedSuccess__e/fields/Org_Sfdc_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Sfdc_Id__c</fullName>
    <description>Salesforce Account record Id. Set on success events; null on failure events (no Account committed).</description>
    <label>Org Sfdc Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>