force-app/main/default/objects/Sfdc_Accountuser_CreatedSuccess__e/fields/Portal_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_ID__c</fullName>
    <description>uDC portal user identifier (Contact.Portal_User_ID__c). Set on success events; null on failure events.</description>
    <label>Portal User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>