force-app/main/default/objects/Sfdc_Accountuser_CreatedSuccess__e/fields/User_Sfdc_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Sfdc_Id__c</fullName>
    <description>Salesforce Contact record Id. Set on success events; null on failure events (no Contact committed).</description>
    <label>User Sfdc Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>